--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Перевір себе з математики</title>
-  <link rel="stylesheet" href="style1.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <form >
@@ -32,5 +32,5 @@
   </div>
     
 </body>
-<script src="script1.js"></script>
+<script src="script.js"></script>
 </html>
